--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   github: harine
   linkedin: harineravi
   twitter: harine_ravi
-  bluesky: @harineravi.bsky.social
+  # bluesky: @harineravi.bsky.social
 
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
