--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ avatar: images/profile.jpg
 #
 
 # Includes an icon in the footer for each username you enter
+#not currently used
 footer-links:
   email: harine@cs.washington.edu
   github: harine
